--- a/Editor/BakingMoldsLibraryEditor.style.uss
+++ b/Editor/BakingMoldsLibraryEditor.style.uss
@@ -9,41 +9,39 @@
     padding-bottom: 0;
 }
 
+#mold-list__item__apply-button {
+    display: none;
+    -unity-background-scale-mode: scale-to-fit;
+    width: 50px;
+    background-color: clear;
+    border-width: 1px;
+    border-radius: 3px;
+}
+
+.unity-collection-view__item--selected #mold-list__item__apply-button {
+    display: flex;
+}
+
+#mold-list__item__apply-button:hover {
+    background-color: rgba(0, 0, 0, 0.09);
+}
+
+#mold-list__item__apply-button:active {
+    background-color: rgba(189, 189, 189, 0);
+}
+
 .mold-list__item {
     flex-direction: row;
 }
 
 .mold-list__item > Label {
-    font-size: 15px;
-    flex-grow: 1;
     -unity-text-align: middle-left;
 }
 
-.mold-list__item > ToolbarButton {
-    display: none;
-    -unity-text-align: middle-center;
-}
-
-.unity-collection-view__item--selected .mold-list__item > ToolbarButton {
-    display: flex;
-}
-
-.anim-test {
-    background-color: rgb(192, 88, 20);
-}
-
-#arrow-button {
-    background-image: var(--unity-icons-arrow_right);
-    -unity-background-scale-mode: scale-to-fit;
-    width: 20px;
-}
-
-#arrow-button:hover {
-    background-color: var(--unity-colors-toolbar_button-background-hover);
-}
-
-#arrow-button:active {
-    background-color: red;
+#mold-list__item__name {
+    font-size: 15px;
+    flex-grow: 1;
+    padding-left: 15px;
 }
 
 .header {
